sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: illegal start of simple expression
	}while()
               ^AlgCombSort:11: error: ')' expected but '}' found.
}
^