sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	ecart = getNombreValeurs()
	do{
		if(ecart>1){
			ecart = (ecart.toDouble / 1.3).toInt
		}
		i = 0
	}while()
	
}
